[package]
name = "lzfse"
version = "0.1.0"
authors = ["Felix Seele <fseele@gmail.com>"]
license = "MIT"
repository = "https://github.com/citruz/lzfse-rs"
readme = "README.md"
keywords = ["lzfse", "compression"]
categories = ["compression", "api-bindings"]
description = """
Rust bindings for the LZFSE reference implementation.
"""

[dependencies]
libc = "0.2"
lzfse-sys = { version = "1.0.0", path = "../lzfse-sys" }

[dev-dependencies]
rand = "0.7.3"